# advanced-databases-team-yellow

./: README.md  docker-compose.yml
ConnectDBUsingJava/: pom.xml
connect-with-NodeJS/: package-lock.json  package.json
connect-with-NodeJS/controllers/: stores.js
connect-with-NodeJS/models/: Store.js
connect-with-java/: .project  pom.xml
connect-with-nodeJS/: package-lock.json  package.json  server.js
connect-with-nodeJS/config/: config.env  db.js
connect-with-nodeJS/controller/: volunteers.js
connect-with-nodeJS/models/: Volunteer.js
connect-with-nodeJS/public/: add.html  find.html  index.html
connect-with-nodeJS/public/js/: add.js  find.js  map.js
connect-with-nodeJS/routes/: volunteers.js
connect-with-nodeJS/utils/: geocoder.js
connect-with-rust/: Cargo.toml
connect-with-rust/src/: connect_redis.rs  main.rs  operators.rs  paths.rs
connect-with-typescript/: package.json  webpack.config.js
connect-with-typescript/src/: api.ts  index.ts  queries.ts  seeder.ts  types.ts  util.ts
geolocations-javascript/: Index.html  config.env  server.js
geolocations-javascript/routes/: locations.js
geolocations-javascript/routes/controllers/: locations1.js
gps-spoofer-rust/: Cargo.toml
gps-spoofer-rust/src/: car.rs  connect_mongodb.rs  connect_neo4j.rs  connect_redis.rs  main.rs  operators.rs  paths.rs  pub_sub.rs
gps-spoofer-rust/src/static/: heidelberg-bergheim.kml  heidelberg-neunheim.kml  (+1 more)
redis-channel-client/: package.json
redis-channel-client/src/: App.tsx
websocket-server-deno/src/: deps.ts  main.ts  types.ts  util.ts
(+20 files in other folders)
