[package]
name = "connect-with-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rusted_cypher = "1.1.0"
#mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } 
tokio = "1"
chrono = "0.4" 
serde = "1" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
